Move sql.js & sqlite3 to peer & dev dependencies

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "database-js-sqlite",
+  "name": "@trifacta/database-js-sqlite",
   "version": "1.2.4",
   "description": "Database-js wrapper for SQLite",
   "main": "index.js",
@@ -22,11 +22,15 @@
   "homepage": "https://github.com/mlaanderson/database-js-sqlite#readme",
   "dependencies": {
     "database-js-common": "git+https://github.com/mlaanderson/database-js-common.git",
-    "debug": "^3.1.0",
-    "sql.js": "^0.4.0",
-    "sqlite3": "git+https://github.com/mapbox/node-sqlite3.git"
+    "debug": "^3.1.0"
   },
   "devDependencies": {
-    "database-js": "^3.0.2"
+    "database-js": "^3.0.2",
+    "sql.js": "^1.6.2",
+    "sqlite3": "npm:@trifacta/sqlite3@^5.0.3"
+  },
+  "peerDependencies": {
+    "sqlite3": "5.x",
+    "sql.js": "1.x"
   }
 }
